--- a/UFCStats.ipynb
+++ b/UFCStats.ipynb
@@ -1,17 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Import Dependencies**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<module 'web_scrape' from 'c:\\\\Users\\\\mcdin\\\\OneDrive - The University of Sydney (Students)\\\\Other\\\\Code Projects\\\\UFCStats\\\\web_scrape.py'>"
+       "<module 'refactor_data' from 'c:\\\\Users\\\\mcdin\\\\OneDrive - The University of Sydney (Students)\\\\Other\\\\Code Projects\\\\UFCStats\\\\refactor_data.py'>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -19,7 +26,18 @@
    "source": [
     "import importlib\n",
     "import web_scrape as ws\n",
-    "importlib.reload(ws)"
+    "import refactor_data as rd\n",
+    "\n",
+    "importlib.reload(ws)\n",
+    "importlib.reload(rd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Scrape From Web**\n",
+    "Do not run this shit unless necessary!!!"
    ]
   },
   {
